# compneuro

./: README.md  pyproject.toml
notebooks/: calculus_1.ipynb  calculus_2.ipynb  calculus_3.ipynb  lif_neuron.ipynb  linear_algebra.ipynb  probability.ipynb
tutorials/W1D2_ModelFitting/student/: W1D2_Tutorial5.ipynb  W1D2_Tutorial6.ipynb
